# EKYC-Passport-And-Face-Detector

./: LICENSE  README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_gray.xml
app/src/main/res/font/: amita_bold.xml
app/src/main/res/layout/: activity_main.xml  bottom_sheet_ui_result.xml  layout_advancen_face_config.xml  layout_card_config.xml  layout_common_config.xml  layout_normal_face_config.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: AnnotationProcessorsDependencies.kt  BuildAndroidConfig.kt  BuildDependenciesVersions.kt  BuildPlugins.kt  Dependencies.kt  TestDependencies.kt
buildSystem/: release
buildSystem/scripts/: run_tests.sh
ekyc/: CHANGELOG.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ekyc/src/main/: AndroidManifest.xml
ekyc/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ekyc/src/main/cpp/src/: config.cpp  config.h  dto.hpp  face.cpp  face.h  nanodet.cpp  nanodet.hpp  tools.cpp  tools.h
ekyc/src/main/res/color/: kyc_camera_icon_tint_state.xml
ekyc/src/main/res/drawable/: kyc_bg_advanced_focused.xml  kyc_bg_advanced_none.xml  kyc_bg_advanced_unfocused.xml  kyc_bg_bottom_dialog.xml  kyc_bg_camera.xml  kyc_bg_camera_border.xml  kyc_bg_camera_border_disable.xml  kyc_bg_camera_icon.xml  kyc_bg_card_guide_text.xml  kyc_bg_error_bottom_dialog.xml  kyc_bg_guide_icon.xml  (+40 more)
(+137 files in other folders)
